--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>News Aggregator</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NewsApp</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <h1 class="site-title">News Aggregator</h1>
-  
-  <div class="search-container">
-    <input type="text" name="search" id="search" placeholder="Type and press enter to search..." />
-  </div>
 
-  <ul id="news-articles">
+<body>  
+    <div class="mainheading">News Aggregator</div>
+    <div class="search-bar">
+        <input type="text" name="search" id="search" placeholder="Type and press enter to search">
+    </div>
+    <ul id="news-articles">
 
-  </ul>
+    </ul>
+
 </body>
+
+<script src="script.js" type="text/javascript"></script>
+
 </html>
