--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>  
     <div class="mainheading">News Aggregator</div>
     <div class="search-bar">
-        <input type="text" name="search" id="search" placeholder="Type and press enter to search">
+        <input type="text" name="search" id="search" placeholder="Type and press enter to search...">
     </div>
     <ul id="news-articles">
 
